2019-08-13  Florian Weimer  <fweimer@redhat.com>

	* login/getutid_r.c (__getutid_r): _HAVE_UT_ID and _HAVE_UT_TYPE
	are always true.
	* login/getutmp.c (getutmp): _HAVE_UT_TYPE, _HAVE_UT_PID,
	_HAVE_UT_ID, _HAVE_UT_HOST, _HAVE_UT_TV are always true.
	* login/getutmpx.c (getutmpx): Likewise.
	* login/login.c (login): _HAVE_UT_TYPE, _HAVE_UT_PID are always
	true.
	* login/logout.c (logout): _HAVE_UT_TYPE, _HAVE_UT_HOST,
	_HAVE_UT_TV are always true.
	* login/logwtmp.c (logwtmp): _HAVE_UT_PID, _HAVE_UT_TYPE,
	_HAVE_UT_HOST, _HAVE_UT_TV are always true.
	* login/tst-utmp.c: _HAVE_UT_TYPE, _HAVE_UT_TV are always true.
	* login/utmp_file.c (__libc_setutent): _HAVE_UT_TYPE, _HAVE_UT_ID
	are always true.
	(internal_getut_r): _HAVE_UT_TYPE is always true.
	(__libc_pututline): Likewise.
	* login/programs/utmpdump.c (print_entry): Assume that
	_HAVE_UT_TYPE, _HAVE_UT_PID, _HAVE_UT_ID, _HAVE_UT_HOST,
	_HAVE_UT_TV are always true.
	* sysdeps/generic/utmp-equal.h (__utmp_equal): _HAVE_UT_TYPE,
	_HAVE_UT_ID are always true.
	* sysdeps/gnu/bits/utmp.h: Move to ...
	* bits/utmp.h: ... here, replacing the old file.

2019-08-05  Florian Weimer  <fweimer@redhat.com>

	[BZ #23518]
	* login/uptmp-private.h (struct ufuncs): Remove definition.
	(__libc_utmp_file_functions, __libc_utmp_unknown_functions)
	(__libc_utmp_jump_table): Remove declarations.
	(__libc_setutent, __libc_getutent_r, __libc_getutid_r)
	(__libc_getutline_r, __libc_pututline, __libc_endutent)
	(__libc_updwtmp): Declare.
	* login/getutent_r.c (__libc_utmp_unknown_functions)
	(__libc_utmp_jump_table, setutent_unknown, getutent_r_unknown)
	(getutid_r_unknown, getutline_r_unknown, pututline_unknown)
	(endutent_unknown): Remove definitions.
	(__setutent): Call __libc_setutent.
	(__getutent_r): Call __libc_getutent_r.
	(__pututline): Call __libc_pututline.
	(__endutent): Call __libc_endutent.
	* login/getutid_r.c (__getutid_r): Call __libc_getutid_r.
	* login/getutline_r.c (__getutline_r): Call __libc_getutline_r.